# mypy-plugin-test

./: .gitignore  README.md  main.py  pyproject.toml
mypy_plugin_test/: plugin.py
