[tool.poetry]
name = "mypy-plugin-test"
version = "0.1.0"
description = ""
authors = ["Alessandro Ferrini <alessandro.ferrini@apptecsrl.com>"]
readme = "README.md"
packages = [{include = "mypy_plugin_test"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins="./mypy_plugin_test/plugin.py"
